# Disrust-Bot

./: Cargo.toml  Dockerfile  Shuttle.toml  build.rs
src/: main.rs
src/commands/: compress.rs
src/structs/: message.rs
tests/: compress.rs
