[package]
name = "disrust-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
mozjpeg = "0.10.12"
reqwest = "0.12.12"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.49.0"
shuttle-serenity = "0.49.0"
tokio = "1.26.0"
tracing = "0.1.37"
