[package]
name = "disrust-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
image = "0.25.6"
mozjpeg = "0.10.13"
reqwest = "0.12.15"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.55.0"
shuttle-serenity = "0.55.0"
tokio = "1.26.1"
tracing = "0.1.41"
